Closed Bug 916094 Opened 11 years ago Closed 11 years ago

IDBFactory::Create() asserts when it's used in JS from chrome in IPC

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: baku, Assigned: baku)

References

Details

Attachments

(1 file, 3 obsolete files)

No description provided.
Attached patch patch (obsolete) — Splinter Review
Attachment #804427 - Flags: review?(bent.mozilla)
Attachment #804427 - Flags: review?(Jan.Varga)
Comment on attachment 804427 [details] [diff] [review] patch Review of attachment 804427 [details] [diff] [review]: ----------------------------------------------------------------- I think we found a better approach, to just expose GetInfoForChrome in QuotaManager. ::: dom/indexedDB/IDBFactory.cpp @@ +205,5 @@ > nsCString origin; > StoragePrivilege privilege; > PersistenceType defaultPersistenceType; > nsresult rv = > + QuotaManager::GetInfoFromWindowInternal(nullptr, &group, &origin, &privilege, Nit: that doesn't fit on one line ::: dom/indexedDB/IDBFactory.h @@ +199,5 @@ > const Optional<mozilla::dom::StorageType>& aStorageType, bool aDelete, > ErrorResult& aRv); > > + // Used internally when ContentParent calls Create(). > + static nsresult CreateInternal(JSContext* aCx, Nit: "static nsresult" on a separate line I know, the original Create() has it on one line ::: dom/quota/QuotaManager.cpp @@ +2177,5 @@ > +QuotaManager::GetInfoFromWindowInternal(nsPIDOMWindow* aWindow, > + nsACString* aGroup, > + nsACString* aASCIIOrigin, > + StoragePrivilege* aPrivilege, > + PersistenceType* aDefaultPersistenceType) Nit: this doesn't fit on one line, you will have to shift all arguments to the left
Attachment #804427 - Flags: review?(bent.mozilla)
Attachment #804427 - Flags: review?(Jan.Varga)
Attached patch patch (obsolete) — Splinter Review
Attachment #804427 - Attachment is obsolete: true
Attachment #806676 - Flags: review?(bent.mozilla)
Attachment #806676 - Flags: review?(Jan.Varga)
Comment on attachment 806676 [details] [diff] [review] patch Review of attachment 806676 [details] [diff] [review]: ----------------------------------------------------------------- Looks good to me!
Attachment #806676 - Flags: review?(bent.mozilla) → review+
Attached patch patchSplinter Review
Ok, I think I now understand the real problem and here's even cleaner patch IMO.
Attachment #806941 - Flags: review?(bent.mozilla)
Comment on attachment 806941 [details] [diff] [review] patch Review of attachment 806941 [details] [diff] [review]: ----------------------------------------------------------------- Ok, this looks fine too.
Attachment #806941 - Flags: review?(bent.mozilla) → review+
Comment on attachment 806676 [details] [diff] [review] patch Andrea, go ahead and land it.
Attachment #806676 - Flags: review?(Jan.Varga)
Attached patch patch (obsolete) — Splinter Review
Attachment #806676 - Attachment is obsolete: true
Attachment #806941 - Attachment is obsolete: true
Keywords: checkin-needed
It's green on try.
(In reply to Andrea Marchesini (:baku) from comment #8) > Created attachment 807073 [details] [diff] [review] > patch Andrea, I meant to land the other patch that doesn't add CreateInternal()
Keywords: checkin-needed
Attachment #807073 - Attachment is obsolete: true
Attachment #806941 - Attachment is obsolete: false
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: