Bug 916094 - Assertions removed from IDBFactory::Create() when it's used in JS from chrome in IPC. r=bent